--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   some people I have met—the ways that we work together
 baseurl: "councils" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: _adamburton
+twitter_username: adamburton
 github_username:  adamburton
 
 # Build settings
