--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: councils
 email: adam@ewire.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  description.
+  some people I have met—the ways that we work together
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: _adamburton
