--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: councils
 email: adam@ewire.co.uk
 description: > # this means to ignore newlines until "baseurl:"
   some people I have met—the ways that we work together
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/councils" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: _adamburton
 github_username:  adamburton
